force-app/main/default/objects/PS_ASU_SP_ADNOTE_V__x/PS_ASU_SP_ADNOTE_V__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/1dTUJVePfqYBanpG9jJsdfRI5VqQP_3-6aWpQG7QwG5M/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>PS_ASU_SP_ADNOTE_Vs</externalName>
    <label>Advisor Note (external)</label>
    <pluralLabel>Advisor Note (external)</pluralLabel>
</CustomObject>