force-app/main/default/objects/PS_ASU_SP_ADNOTE_V__x/fields/Academic_Plan__c.field-meta.xml
<CustomField>
    <fullName>Academic_Plan__c</fullName>
    <description>Data sourced from PS_ACAD_PLAN.ACAD_PLAN or PS_ASU_AA_POS.ACAD_PLAN</description>
    <externalDeveloperName>ACAD_PLAN</externalDeveloperName>
    <label>Academic Plan</label>
    <length>10</length>
    <referenceTargetField>Plan__c.Plan_Code__c</referenceTargetField>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Advisor Note (external)</relationshipLabel>
    <relationshipName>Advisor_Note_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>