force-app/main/default/objects/PS_ASU_SP_ADNOTE_V__x/fields/Academic_Program__c.field-meta.xml
<CustomField>
    <fullName>Academic_Program__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.ACAD_PROG or PS_ASU_AA_POS.ACAD_PROG</description>
    <externalDeveloperName>ACAD_PROG</externalDeveloperName>
    <label>Academic Program</label>
    <length>5</length>
    <referenceTargetField>Program__c.Program_Code__c</referenceTargetField>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Advisor Note (external)</relationshipLabel>
    <relationshipName>Advisor_Note_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>