force-app/main/default/objects/PS_ASU_SP_ADNOTE_V__x/fields/COMMENTS__c.field-meta.xml
<CustomField>
    <fullName>COMMENTS__c</fullName>
    <description>Data sourced from PS_ASU_MACS_NOTES.DESCRLONG</description>
    <externalDeveloperName>COMMENTS</externalDeveloperName>
    <label>Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>