force-app/main/default/objects/PS_ASU_SP_ADNOTE_V__x/fields/CREATDTTM__c.field-meta.xml
<CustomField>
    <fullName>CREATDTTM__c</fullName>
    <description>Data sourced from PS_ASU_MACS_NOTES.CREATDTTM</description>
    <externalDeveloperName>CREATEDTTM</externalDeveloperName>
    <label>Comment Date</label>
    <type>DateTime</type>
</CustomField>