force-app/main/default/objects/PS_ASU_SP_ADNOTE_V__x/fields/CREATEOPRID__c.field-meta.xml
<CustomField>
    <fullName>CREATEOPRID__c</fullName>
    <description>Data sourced from PS_ASU_MACS_NOTES.CREATEOPRID</description>
    <externalDeveloperName>CREATEOPRID</externalDeveloperName>
    <label>Commenter ASURITE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>