force-app/main/default/objects/PS_ASU_SP_ADNOTE_V__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from PS_ASU_MACS_NOTES.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Advisor Note (external)</relationshipLabel>
    <relationshipName>Advisor_Note_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>