force-app/main/default/objects/PS_ASU_SP_ADNOTE_V__x/fields/NAME__c.field-meta.xml
<CustomField>
    <fullName>NAME__c</fullName>
    <description>Data sourced from PS_NAMES_VW.NAME</description>
    <externalDeveloperName>NAME</externalDeveloperName>
    <label>Commenter Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>