force-app/main/default/objects/PS_ASU_SP_ADNOTE_V__x/fields/STRM__c.field-meta.xml
<CustomField>
    <fullName>STRM__c</fullName>
    <description>Data sourced from PS_ASU_MACS_NOTES.STRM</description>
    <externalDeveloperName>STRM</externalDeveloperName>
    <label>Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Advisor Note (external)</relationshipLabel>
    <relationshipName>Advisor_Note_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>