force-app/main/default/objects/PS_ASU_SP_ADNOTE_V__x/fields/Student_Career_Number__c.field-meta.xml
<CustomField>
    <fullName>Student_Career_Number__c</fullName>
    <description>Data sourced from PS_ASU_MACS_NOTES.STDNT_CAR_NBR or PS_ASU_AA_POS.STDNT_CAR_NBR</description>
    <externalDeveloperName>STDNT_CAR_NBR</externalDeveloperName>
    <label>Student Career Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>